syntax = "proto3";

package model;

option java_package =  "com.alex.services";
option java_multiple_files = true;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

//client
service PingService {
  rpc sendPing(google.protobuf.Empty) returns (Pong) {}
  rpc testService(google.protobuf.StringValue) returns (Ping) {}
}

//server
service PongService {
  rpc receivePing(Ping) returns (Pong) {}
  rpc testService(google.protobuf.StringValue) returns (Pong) {}
}

message Pong {
  int32 id = 1;
  string description = 2;
}

message Ping {
  int32 id = 1;
  string description = 2;
}